test/libsolidity/syntaxTests/contractBaseLocation/layout_fractional_number.sol
contract A layout at 3/2 {}
// ----
// TypeError 1763: (21-24): Contract storage base location cannot be specified by a fractional number.
